@@ -1095,7 +1095,7 @@ vm_init_redefined_flag(void)
     OP(Size, SIZE), (C(Array), C(String), C(Hash));
     OP(EmptyP, EMPTY_P), (C(Array), C(String), C(Hash));
     OP(Succ, SUCC), (C(Fixnum), C(String), C(Time));
-    OP(EqTilde, MATCH), (C(Regexp));
+    OP(EqTilde, MATCH), (C(Regexp), C(String));
 #undef C
 #undef OP
 }
